# quantities

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  temp_fix_validate.py
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
conf/: config.yaml
conf/agent/: guardrails.yaml  research.yaml  tools.yaml
conf/backtest/: costs.yaml  event_driven.yaml  portfolio_rules.yaml  vectorized.yaml
conf/data/: dataset_policies.yaml  feature_store.yaml  schema.yaml  sources.yaml
conf/env/: ci.yaml  local.yaml  prod_like.yaml
conf/experiment/: lineage.yaml  reproducibility.yaml  tracking.yaml
conf/model/: registry.yaml
conf/train/: callbacks.yaml  config.yaml  default.yaml  hpo.yaml  metrics.yaml
docs/: experiment-standards.md  frontend-dataset-train-manual-checklist.md  local-startup.md  risk-checklist.md
docs/adr/: ADR-001.md  ADR-002-dataset-experience-taxonomy.md
docs/architecture/: backend-runtime-control.md  dataset-information-architecture.md  dataset-training-handoff.md  optional-quant-backends.md  overview.md
docs/contracts/: interfaces.md
scripts/: benchmark_baselines.py
scripts/bootstrap/: bootstrap_unix.sh  bootstrap_windows.ps1
scripts/dev/: backend_control.ps1  backend_smoke.py  build_google_news_archive.py  cleanup_datasets.py  run_backend.py  start_local.ps1
src/: __init__.py
src/quant_platform/: __init__.py
tests/: conftest.py
tests/compatibility/: test_legacy_train_contracts.py
tests/contract/: test_agent_interfaces.py  (+1 more)
(+384 files in other folders)
