[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "quant-platform"
version = "0.1.0"
description = "Professional digital-asset quantitative research platform foundation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "fastapi>=0.115.0",
  "hydra-core>=1.3.2",
  "numpy>=2.0.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.0",
  "typer>=0.16.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.12.0",
  "mypy>=1.11.0",
]
tracking = [
  "mlflow>=2.22.0",
]
models = [
  "lightgbm>=4.6.0",
  "torch>=2.7.0",
]

[project.scripts]
quant-platform = "quant_platform.cli.main:run"
quant-platform-web = "quant_platform.webapi.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_platform"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "legacy: compatibility tests for the old src.train path",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["quant_platform"]
